Added user photo

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
     <!-- Main Content -->
 
     <div class="main-content-container">
-        <div class="top-content"></div>
+        <div class="top-content">
+            <div class="projects-headding"><h1>Your Projects</h1></div>
+            <div class="announcements-heading"><h1>Announcements</h1></div>
+        </div>
         <div class="cards">
             <div class="card">
                 <div class="bio">
@@ -88,7 +91,11 @@
                     <p>Suspendisse sollicitudin nibh erat, id</p>
                     <p>facilisis felis accumsan nec.</p>
                 </div>
-                <div class="card-buttons"></div>
+                <div class="card-buttons">
+                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-eye"></i>
+                    <i class="fa-solid fa-stethoscope"></i>
+                </div>
             </div>
             <div class="card">
                 <div class="bio">
@@ -97,7 +104,11 @@
                     <p>Suspendisse sollicitudin nibh erat, id</p>
                     <p>facilisis felis accumsan nec.</p>
                 </div>
-                <div class="card-buttons"></div>
+                <div class="card-buttons">
+                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-eye"></i>
+                    <i class="fa-solid fa-stethoscope"></i>
+                </div>
             </div>
             <div class="card">
                 <div class="bio">
@@ -106,7 +117,11 @@
                     <p>Suspendisse sollicitudin nibh erat, id</p>
                     <p>facilisis felis accumsan nec.</p>
                 </div>
-                <div class="card-buttons"></div>
+                <div class="card-buttons">
+                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-eye"></i>
+                    <i class="fa-solid fa-stethoscope"></i>
+                </div>
             </div>
             <div class="card">
                 <div class="bio">
@@ -115,7 +130,11 @@
                     <p>Suspendisse sollicitudin nibh erat, id</p>
                     <p>facilisis felis accumsan nec.</p>
                 </div>
-                <div class="card-buttons"></div>
+                <div class="card-buttons">
+                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-eye"></i>
+                    <i class="fa-solid fa-stethoscope"></i>
+                </div>
             </div>
             <div class="card">
                 <div class="bio">
@@ -124,7 +143,11 @@
                     <p>Suspendisse sollicitudin nibh erat, id</p>
                     <p>facilisis felis accumsan nec.</p>
                 </div>
-                <div class="card-buttons"></div>
+                <div class="card-buttons">
+                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-eye"></i>
+                    <i class="fa-solid fa-stethoscope"></i>
+                </div>
             </div>
             <div class="card">
                 <div class="bio">
@@ -133,11 +156,48 @@
                     <p>Suspendisse sollicitudin nibh erat, id</p>
                     <p>facilisis felis accumsan nec.</p>
                 </div>
-                <div class="card-buttons"></div>
+                <div class="card-buttons">
+                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-eye"></i>
+                    <i class="fa-solid fa-stethoscope"></i>
+                </div>
             </div>
         </div>
-        <div class="announcement"></div>
-        <div class="trending"></div>
+        <div class="announcement">
+            <div class="announcement-card">
+                <div>
+                    <h1>Site Maintenance</h1>
+                    <p>Vestibulum condimentum tellus lacus,</p>
+                    <p>in accumsan elit maximus ac, Donec</p>
+                    <p>hendrerit sodales congue...</p>
+                </div>
+                <div class="break"></div>
+                <div>
+                    <h1>Site Maintenance</h1>
+                    <p>Vestibulum condimentum tellus lacus,</p>
+                    <p>in accumsan elit maximus ac, Donec</p>
+                    <p>hendrerit sodales congue...</p>
+                </div>
+                <div class="break"></div>
+                <div>
+                    <h1>Site Maintenance</h1>
+                    <p>Vestibulum condimentum tellus lacus,</p>
+                    <p>in accumsan elit maximus ac, Donec</p>
+                    <p>hendrerit sodales congue...</p>
+                </div>
+            </div>
+        </div>
+        <div class="trending">
+            <h1 style="padding-right: 10.5rem; font-size: 1.93rem;">Trending</h1>
+            <div class="trending-card">
+                <div class="users">
+                    <img src="/images/user1.jpeg" alt="User 1">
+                </div>
+                <div class="users"></div>
+                <div class="users"></div>
+                <div class="users"></div>
+            </div>
+        </div>
     </div>
 
     </div>
