Finished final touches

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="search-bar">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <form action="get">
-                    <input id="search" type="text">
+                    <input placeholder="Yes I really made this :0" id="search" type="text">
                 </form>
             </div>
             <div class="right-top-bar">
@@ -191,11 +191,33 @@
             <h1 style="padding-right: 10.5rem; font-size: 1.93rem;">Trending</h1>
             <div class="trending-card">
                 <div class="users">
-                    <img src="/images/user1.jpeg" alt="User 1">
+                    <img style="width: 25%;" src="/images/user1.jpeg" alt="User 1">
+                    <div class="user-tags">
+                        <p>@tegan</p>
+                        <p>World Peace Builder</p>
+                    </div>
                 </div>
-                <div class="users"></div>
-                <div class="users"></div>
-                <div class="users"></div>
+                <div class="users">
+                    <img style="width: 25%;" src="/images/user1.jpeg" alt="User 1">
+                    <div class="user-tags">
+                        <p>@morgan</p>
+                        <p>Super Cool Project</p>
+                    </div>
+                </div>
+                <div class="users">
+                    <img style="width: 25%;" src="/images/user1.jpeg" alt="User 1">
+                    <div class="user-tags">
+                        <p>@kendall</p>
+                        <p>Life Changing App</p>
+                    </div>
+                </div>
+                <div class="users">
+                    <img style="width: 25%;" src="/images/user1.jpeg" alt="User 1">
+                    <div class="user-tags">
+                        <p>@alex</p>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
